# product_copy_AI_Agent

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  start.py
backend/config/: config.yaml
backend/data/input/: tmp_input_526f65ad0b9944eba2221020904ee411.xlsx
backend/data/instructions/: prompt_history.json  tmp_aad03453cc2a4203ac7e10d250643984.docx
backend/data/output/: validated_product_copies_20251209_123042.xlsx
backend/notebooks/: runner.ipynb
backend/src/product_copy_agent/: agent.py  main.py  prompts.py  utils.py
backend/src/product_copy_agent/api/routers/: init.py  input_file.py  instructions.py  prompt_history.py
backend/src/product_copy_agent/aws/: bedrock_invoke.py
backend/src/product_copy_agent/graph/: graph_builder.py  nodes.py  state.py
frontend/agent_ui/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/agent_ui/src/: App.jsx
frontend/agent_ui/src/components/: DownloadFile.jsx  Footer.jsx  Home.css  Home.jsx  InputUpload.jsx  InstructionUpload.jsx  Navbar.jsx  Spinner.jsx  Toast.jsx
